Work on the Contacts page and adding footer to index.html

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>OtterSiteOfTheWeb</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" type="text/css" href="./styles.css" />
+    <script src="./scripts.js"></script>
 </head>
 <body>
     <div class="contain-to-grid fixed"> 
@@ -56,5 +57,32 @@
         </nav>
      </div>
      <img src=".\img\MainOtter.jpg" alt=MainOtter>
+     <div id="footer">
+         <div class="spacing"></div>
+         <div class="row"></div>
+            <div class="large-3 medium-3 columns">
+                <h1>
+                    <a href="./index.html">
+                        <img src="./img/otterbadge.jpg">
+                    </a>
+                </h1>
+            </div>
+            <div class="large-3 medium-3 columns">
+                <div class="links">
+                    <h4>Links</h4>
+                <ul>
+                    <li>
+                        <a href="https://docs.inedo.com/docs/otter-reference-api" target="_blank">Otter API</a>
+                    </li>
+                    <li>
+                        <a href="https://www.doi.gov/blog/12-facts-about-otters-sea-otter-awareness-week" target="_blank">Otter cuteness check-list</a>
+                    </li>
+                    <li>
+                        <a href="https://en.wikipedia.org/wiki/Otter" target="_blank">Otter refferences</a>
+                    </li>
+                </ul>    
+                </div>
+            </div>
+     </div>
 </body>
 </html>
