--- a/index.html
+++ b/index.html
@@ -1,62 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>OtterSiteOfTheWeb</title>
-    <link rel="stylesheet" type="text/css" href="./styles.css" />
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/5.1.3/css/bootstrap.min.css">
+    <!-- TODO: -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/5.1.3/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/5.1.3/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="./styles.css">
     <script src="./scripts.js"></script>
 </head>
 <body>
-    <div class="contain-to-grid fixed"> 
-        <nav class="top-bar" data-topbar role="navigation">
-            <ul class="title-area">
-               <li class="name">
-                   <h1>
-                        <a href="">Otter site of the Web
-                            <img alt class="col-header-logo" src="">
-                        </a>
-                    </h1>
-               </li> 
-               <li class="toggle-topbar menu-icon">
-                   <a href="">MENU</a>
-               </li>
-            </ul>
-            <section class="right">
-                <ul class="right">
-                    <li class="active">
-                        <a href="">HOME</a>
-                    </li>
-                    <li class="has-dropdown not-click">
-                        <a href="./catalogue.html">CATALOGUE</a>
-                        <ul class="dropdown">
-                            <li>
-                                <a href="./catalogue.html#target1">Eurasian otter (Lutra lutra)</a>
-                            </li>
-                            <li>
-                                <a href="./catalogue.html#target2">Hairy-nosed otter (Lutra sumatrana)</a>
-                            </li>
-                            <li>
-                                <a href="./catalogue.html#target3">Spotted-necked otter (Hydrictus maculicollis)</a>
-                            </li>
-                            <li>
-                                <a href="./catalogue.html#target4">Smooth-coated otter (Lutrogale persipicillata)</a>
-                            </li>
-                            <li>
-                                <a href="./catalogue.html#target5">Bonus: Cuddly otter</a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li>
-                        <a href="contact.html">CONTACT</a>
-                    </li>
-                </ul>
 
-            </section>
-        </nav>
-     </div>
+
+
+    <div class="contain-to-grid sticky"> 
+        <nav class="top-bar" data-options='sticky_on: large' data-topbar=''>
+            <ul class="title-area">
+                <h1>
+                    <a href="/"><img alt class="col-header-logo" src="./img/otterbadge.jpg">tter site of the Web </a>
+                </h1>
+            </ul>
+            <section class="top-bar-section">
+
+
+
+
+
+                
+
+                  <div class="btn-group" role="group" aria-label="Button group with nested dropdown">
+                    <button class="btn btn-secondary btn-lg dropdown-toggle" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <i class="glyphicon glyphicon-menu-hamburger"></i>MENU
+                    </button>
+                    <ul class="dropdown-menu" role="menu">
+                        <li><a href="index.html">HOME</a></li>
+                        <li><a href="./catalogue.html">CATALOGUE &raquo; </a></li>
+                            <ul class="dropdown-menu dropdown-submenu">
+                                <li>
+                                    <a class="dropdown-item dropdown-subitem" href="./catalogue.html#target1">Eurasian otter (Lutra lutra)</a>
+                                </li>
+                                <li>
+                                    <a class="dropdown-item" href="./catalogue.html#target2">Hairy-nosed otter (Lutra sumatrana)</a>
+                                </li>
+                                <li>
+                                    <a class="dropdown-item" href="./catalogue.html#target3">Spotted-necked otter (Hydrictus maculicollis)</a>
+                                </li>
+                                <li>
+                                    <a class="dropdown-item" href="./catalogue.html#target4">Smooth-coated otter (Lutrogale persipicillata)</a>
+                                </li>
+                                <li>
+                                    <a class="dropdown-item" href="./catalogue.html#target4"><a href="./catalogue.html#target5">Bonus: Cuddly otter</a>
+                                </li>
+                            </ul>    
+                        <li><a href="contact.html">CONTACT</a></li>
+                    </ul>
+                </div>
+
+     <div class="spacing" style="background-color: #ccc; height: 2px;"></div>
      <img src=".\img\MainOtter.jpg" alt=MainOtter>
+     <div class="spacing" style="background-color: #ccc; height: 2px;"></div>
+     <div class="spacing" style="background-color: #ccc; height: 2px;"></div>
+     <div class="spacing" style="background-color: #ccc; height: 2px;"></div>
      <div id="footer">
          <div class="spacing"></div>
          <div class="row"></div>
@@ -84,5 +91,8 @@
                 </div>
             </div>
      </div>
+     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
 </body>
 </html>
