--- a/index.html
+++ b/index.html
@@ -4,63 +4,86 @@
     <title>OtterSiteOfTheWeb</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/5.1.3/css/bootstrap.min.css">
-    <!-- TODO: -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/5.1.3/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/5.1.3/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
     <link rel="stylesheet" type="text/css" href="./styles.css">
     <script src="./scripts.js"></script>
 </head>
 <body>
-
-
-
-    <div class="contain-to-grid sticky"> 
-        <nav class="top-bar" data-options='sticky_on: large' data-topbar=''>
-            <ul class="title-area">
-                <h1>
-                    <a href="/"><img alt class="col-header-logo" src="./img/otterbadge.jpg">tter site of the Web </a>
-                </h1>
+    <nav class="navbar navbar-toggleable-md navbar-light bg-light">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="index.html">
+            <img src="./img/otterbadge.jpg" alt="" width="30" height="30" class="d-inline-block align-text-top">
+            tter site of the Web
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarScroll">
+            <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 400px;">
+                <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="index.html">HOME</a>
+                </li>
+                <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarScrollingDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    CATALOGUE
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="navbarScrollingDropdown">
+                    <li><a class="dropdown-item" href="./catalogue.html#target1">Eurasian otter (Lutra lutra)</a></li>
+                    <li><a class="dropdown-item" href="./catalogue.html#target2">Hairy-nosed otter (Lutra sumatrana)</a></li>
+                    <li><a class="dropdown-item" href="./catalogue.html#target3">Spotted-necked otter (Hydrictus maculicollis)</a></li>
+                    <li><a class="dropdown-item" href="./catalogue.html#target4">Smooth-coated otter (Lutrogale persipicillata)</a></li>
+                    <li><hr class="dropdown-divider"></li>
+                    <li><a class="dropdown-item" href="./catalogue.html#target5">Bonus: Cuddly otter</a></li>
+                </ul>
+                </li>
+                <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="contact.html">CONTACT</a>
+                </li>
             </ul>
-            <section class="top-bar-section">
+        </div>
+    </nav>  
+
+    <div class="spacing" style="background-color: #ccc; height: 2px;"></div>
+    <div class="spacing" style="background-color: #ccc; height: 2px;"></div>
+    <div class="spacing" style="background-color: #ccc; height: 2px;"></div>
+    <div class="spacing" style="background-color: #ccc; height: 2px;"></div>
 
 
 
-
-
-                
-
-                  <div class="btn-group" role="group" aria-label="Button group with nested dropdown">
-                    <button class="btn btn-secondary btn-lg dropdown-toggle" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    <i class="glyphicon glyphicon-menu-hamburger"></i>MENU
-                    </button>
-                    <ul class="dropdown-menu" role="menu">
-                        <li><a href="index.html">HOME</a></li>
-                        <li><a href="./catalogue.html">CATALOGUE &raquo; </a></li>
-                            <ul class="dropdown-menu dropdown-submenu">
-                                <li>
-                                    <a class="dropdown-item dropdown-subitem" href="./catalogue.html#target1">Eurasian otter (Lutra lutra)</a>
-                                </li>
-                                <li>
-                                    <a class="dropdown-item" href="./catalogue.html#target2">Hairy-nosed otter (Lutra sumatrana)</a>
-                                </li>
-                                <li>
-                                    <a class="dropdown-item" href="./catalogue.html#target3">Spotted-necked otter (Hydrictus maculicollis)</a>
-                                </li>
-                                <li>
-                                    <a class="dropdown-item" href="./catalogue.html#target4">Smooth-coated otter (Lutrogale persipicillata)</a>
-                                </li>
-                                <li>
-                                    <a class="dropdown-item" href="./catalogue.html#target4"><a href="./catalogue.html#target5">Bonus: Cuddly otter</a>
-                                </li>
-                            </ul>    
-                        <li><a href="contact.html">CONTACT</a></li>
-                    </ul>
-                </div>
+    <div class="carousel"
+        data-flickity='{ "lazyLoad": 2, "initialIndex": 2, "autoPlay": true,"wrapAround": true, "autoPlay": 1500 }'>
+        <div class="carousel-cell">
+            <img class="carousel-cell-image"
+            src="./img/eurasian.jpg" alt="eurasian" />
+        </div>
+        <div class="carousel-cell">
+            <img class="carousel-cell-image"
+            src="./img/hairy-nosed.jpg" alt="hairynosed" />
+        </div>
+        <div class="carousel-cell">
+            <img class="carousel-cell-image"
+            src="./img/north-american.jpg" alt="northamerican" />
+        </div>
+        <div class="carousel-cell">
+            <img class="carousel-cell-image"
+            src="./img/south-american.jpg" alt="southamerican" />
+        </div>
+        <div class="carousel-cell">
+            <img class="carousel-cell-image"
+            src="./img/spotted-necked.jpg" alt="spottedneck" />
+        </div>
+        <div class="carousel-cell">
+            <img class="carousel-cell-image"
+            src="./img/smooth-coated.jpg" alt="smoothcoated" />
+        </div>
+        <div class="carousel-cell">
+            <img class="carousel-cell-image"
+            src="./img/cute-otter.jpg" alt="cuteotter" />
+        </div>
+    </div>
 
      <div class="spacing" style="background-color: #ccc; height: 2px;"></div>
-     <img src=".\img\MainOtter.jpg" alt=MainOtter>
      <div class="spacing" style="background-color: #ccc; height: 2px;"></div>
      <div class="spacing" style="background-color: #ccc; height: 2px;"></div>
      <div class="spacing" style="background-color: #ccc; height: 2px;"></div>
@@ -92,7 +115,6 @@
             </div>
      </div>
      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
+     <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
 </body>
 </html>
