WIP: need to allign nicely options from the button to the right.

--- a/index.html
+++ b/index.html
@@ -10,17 +10,17 @@
     <script src="./scripts.js"></script>
 </head>
 <body>
-    <nav class="navbar navbar-toggleable-md navbar-light bg-light">
+    <nav class="navbar navbar-toggleable-md navbar-light bg-light" id="navbar">
         <div class="container-fluid">
-            <a class="navbar-brand" href="index.html">
-            <img src="./img/otterbadge.jpg" alt="" width="30" height="30" class="d-inline-block align-text-top">
+            <a class="navbar-brand" id="logo" href="index.html">
+            <img src="./img/otterbadge.jpg" alt="" width="75" height="70" class="d-inline-block align-text-top" id="topotter">
             tter site of the Web
             </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarScroll">
-            <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 400px;">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="index.html">HOME</a>
                 </li>
@@ -45,15 +45,13 @@
     </nav>  
 
     <div class="spacing" style="background-color: #ccc; height: 2px;"></div>
-    <div class="spacing" style="background-color: #ccc; height: 2px;"></div>
-    <div class="spacing" style="background-color: #ccc; height: 2px;"></div>
-    <div class="spacing" style="background-color: #ccc; height: 2px;"></div>
+    <div class="spacing"></div>
 
 
 
     <div class="carousel"
-        data-flickity='{ "lazyLoad": 2, "initialIndex": 2, "autoPlay": true,"wrapAround": true, "autoPlay": 1500 }'>
-        <div class="carousel-cell">
+        data-flickity='{ "lazyLoad": 3, "initialIndex": 3, "autoPlay": true,"wrapAround": true, "autoPlay": 3000}'>
+        <div class="carousel-cell active">
             <img class="carousel-cell-image"
             src="./img/eurasian.jpg" alt="eurasian" />
         </div>
@@ -83,10 +81,33 @@
         </div>
     </div>
 
+
+
+
+    <div class="spacing" style="background-color: #ccc; height: 2px;"></div>
+    <div class="spacing"></div>
+
+    <div class="box">
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic adipisci at numquam velit praesentium deserunt odio. Qui maiores illum, consequatur earum temporibus sed eum voluptatum optio, laboriosam quidem, fuga quo!Loremlorem
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Neque autem, quis vel sit sed, inventore quisquam non dolorum harum quo saepe veniam eaque eligendi? Totam mollitia nihil sequi omnis cumque!Loremloremlore
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Velit, assumenda! Eveniet optio expedita quisquam recusandae enim reprehenderit provident corrupti earum, a, ex id beatae! Quod quibusdam labore rem hic! Soluta. Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique repudiandae, cumque aspernatur, officiis a natus itaque quidem facilis eos blanditiis officia possimus enim, minus quasi earum odit sequi delectus debitis? Lorem ipsum dolor, sit amet consectetur adipisicing elit. At hic tempora maiores adipisci doloribus repellat veniam? Eaque, animi. Illo facilis non eaque numquam quia eum et harum minus incidunt assumenda! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Totam minus est illum quis, ipsa ut odit possimus similique tempore dolorum enim ipsam delectus ducimus velit quae quia necessitatibus. Veritatis, voluptas? Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto veniam dolor consectetur. Architecto iusto, voluptatem dignissimos sequi dolores ipsum accusamus vel, molestias, ipsa nam modi temporibus cum cumque! Dignissimos, ipsam! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Id aspernatur, sequi adipisci exercitationem minus, totam facere libero distinctio alias odio rerum molestias voluptatem excepturi eaque dicta. Velit, vitae doloribus. Quaerat.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic adipisci at numquam velit praesentium deserunt odio. Qui maiores illum, consequatur earum temporibus sed eum voluptatum optio, laboriosam quidem, fuga quo!Loremlorem
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Neque autem, quis vel sit sed, inventore quisquam non dolorum harum quo saepe veniam eaque eligendi? Totam mollitia nihil sequi omnis cumque!Loremloremlore
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Velit, assumenda! Eveniet optio expedita quisquam recusandae enim reprehenderit provident corrupti earum, a, ex id beatae! Quod quibusdam labore rem hic! Soluta. Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique repudiandae, cumque aspernatur, officiis a natus itaque quidem facilis eos blanditiis officia possimus enim, minus quasi earum odit sequi delectus debitis? Lorem ipsum dolor, sit amet consectetur adipisicing elit. At hic tempora maiores adipisci doloribus repellat veniam? Eaque, animi. Illo facilis non eaque numquam quia eum et harum minus incidunt assumenda! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Totam minus est illum quis, ipsa ut odit possimus similique tempore dolorum enim ipsam delectus ducimus velit quae quia necessitatibus. Veritatis, voluptas? Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto veniam dolor consectetur. Architecto iusto, voluptatem dignissimos sequi dolores ipsum accusamus vel, molestias, ipsa nam modi temporibus cum cumque! Dignissimos, ipsam! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Id aspernatur, sequi adipisci exercitationem minus, totam facere libero distinctio alias odio rerum molestias voluptatem excepturi eaque dicta. Velit, vitae doloribus. Quaerat.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic adipisci at numquam velit praesentium deserunt odio. Qui maiores illum, consequatur earum temporibus sed eum voluptatum optio, laboriosam quidem, fuga quo!Loremlorem
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Neque autem, quis vel sit sed, inventore quisquam non dolorum harum quo saepe veniam eaque eligendi? Totam mollitia nihil sequi omnis cumque!Loremloremlore
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Velit, assumenda! Eveniet optio expedita quisquam recusandae enim reprehenderit provident corrupti earum, a, ex id beatae! Quod quibusdam labore rem hic! Soluta. Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique repudiandae, cumque aspernatur, officiis a natus itaque quidem facilis eos blanditiis officia possimus enim, minus quasi earum odit sequi delectus debitis? Lorem ipsum dolor, sit amet consectetur adipisicing elit. At hic tempora maiores adipisci doloribus repellat veniam? Eaque, animi. Illo facilis non eaque numquam quia eum et harum minus incidunt assumenda! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Totam minus est illum quis, ipsa ut odit possimus similique tempore dolorum enim ipsam delectus ducimus velit quae quia necessitatibus. Veritatis, voluptas? Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto veniam dolor consectetur. Architecto iusto, voluptatem dignissimos sequi dolores ipsum accusamus vel, molestias, ipsa nam modi temporibus cum cumque! Dignissimos, ipsam! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Id aspernatur, sequi adipisci exercitationem minus, totam facere libero distinctio alias odio rerum molestias voluptatem excepturi eaque dicta. Velit, vitae doloribus. Quaerat.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic adipisci at numquam velit praesentium deserunt odio. Qui maiores illum, consequatur earum temporibus sed eum voluptatum optio, laboriosam quidem, fuga quo!Loremlorem
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Neque autem, quis vel sit sed, inventore quisquam non dolorum harum quo saepe veniam eaque eligendi? Totam mollitia nihil sequi omnis cumque!Loremloremlore
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Velit, assumenda! Eveniet optio expedita quisquam recusandae enim reprehenderit provident corrupti earum, a, ex id beatae! Quod quibusdam labore rem hic! Soluta. Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique repudiandae, cumque aspernatur, officiis a natus itaque quidem facilis eos blanditiis officia possimus enim, minus quasi earum odit sequi delectus debitis? Lorem ipsum dolor, sit amet consectetur adipisicing elit. At hic tempora maiores adipisci doloribus repellat veniam? Eaque, animi. Illo facilis non eaque numquam quia eum et harum minus incidunt assumenda! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Totam minus est illum quis, ipsa ut odit possimus similique tempore dolorum enim ipsam delectus ducimus velit quae quia necessitatibus. Veritatis, voluptas? Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto veniam dolor consectetur. Architecto iusto, voluptatem dignissimos sequi dolores ipsum accusamus vel, molestias, ipsa nam modi temporibus cum cumque! Dignissimos, ipsam! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Id aspernatur, sequi adipisci exercitationem minus, totam facere libero distinctio alias odio rerum molestias voluptatem excepturi eaque dicta. Velit, vitae doloribus. Quaerat.
+
+        </p>
+    </div>
+
      <div class="spacing" style="background-color: #ccc; height: 2px;"></div>
-     <div class="spacing" style="background-color: #ccc; height: 2px;"></div>
-     <div class="spacing" style="background-color: #ccc; height: 2px;"></div>
-     <div class="spacing" style="background-color: #ccc; height: 2px;"></div>
+     <div class="spacing"></div>
+
      <div id="footer">
          <div class="spacing"></div>
          <div class="row"></div>
@@ -111,8 +132,29 @@
                         <a href="https://en.wikipedia.org/wiki/Otter" target="_blank">Otter refferences</a>
                     </li>
                 </ul>    
+                <div class='spacing'></div>
+                <ul class='socials'>
+                    <li>
+                      <a href='https://www.facebook.com/CatalogueOfLife/'>
+                        <i class='fa fa-facebook'></i>
+                      </a>
+                    </li>
+                    <li>
+                      <a href='https://twitter.com/catalogueoflife'>
+                        <i class='fa fa-twitter'></i>
+                      </a>
+                    </li>
+                  </ul>
+                  <div class='spacing'></div>
                 </div>
             </div>
+            <div class='creativecommons'>
+                <p>© 2021, Lorem ipsum dolor sit, amet consectetur adipisicing elit. Totam, veniam. Repudiandae,<br>
+                  earum iusto vero error fugit omnis iste impedit, delectus, eveniet doloremque culpa corrupti distinctio veritatis <br>
+                  corporis odit accusamus veniam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias, minus. Nostrum saepe <br>
+                </p>
+              </div>
+              <div class='spacing'></div>
      </div>
      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
      <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
