--- a/index.html
+++ b/index.html
@@ -6,10 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="./styles.css">
     <script src="./scripts.js"></script>
 </head>
 <body>
+
     <nav class="navbar navbar-toggleable-md navbar-light bg-light" id="navbar">
         <div class="container-fluid">
             <a class="navbar-brand" id="logo" href="index.html">
@@ -21,8 +25,8 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarScroll">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="index.html">HOME</a>
+                <li class="nav-item active">
+                <a class="nav-link" aria-current="page" href="index.html">HOME</a>
                 </li>
                 <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarScrollingDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -33,7 +37,6 @@
                     <li><a class="dropdown-item" href="./catalogue.html#target2">Hairy-nosed otter (Lutra sumatrana)</a></li>
                     <li><a class="dropdown-item" href="./catalogue.html#target3">Spotted-necked otter (Hydrictus maculicollis)</a></li>
                     <li><a class="dropdown-item" href="./catalogue.html#target4">Smooth-coated otter (Lutrogale persipicillata)</a></li>
-                    <li><hr class="dropdown-divider"></li>
                     <li><a class="dropdown-item" href="./catalogue.html#target5">Bonus: Cuddly otter</a></li>
                 </ul>
                 </li>
@@ -91,17 +94,17 @@
         <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic adipisci at numquam velit praesentium deserunt odio. Qui maiores illum, consequatur earum temporibus sed eum voluptatum optio, laboriosam quidem, fuga quo!Loremlorem
             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Neque autem, quis vel sit sed, inventore quisquam non dolorum harum quo saepe veniam eaque eligendi? Totam mollitia nihil sequi omnis cumque!Loremloremlore
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Velit, assumenda! Eveniet optio expedita quisquam recusandae enim reprehenderit provident corrupti earum, a, ex id beatae! Quod quibusdam labore rem hic! Soluta. Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique repudiandae, cumque aspernatur, officiis a natus itaque quidem facilis eos blanditiis officia possimus enim, minus quasi earum odit sequi delectus debitis? Lorem ipsum dolor, sit amet consectetur adipisicing elit. At hic tempora maiores adipisci doloribus repellat veniam? Eaque, animi. Illo facilis non eaque numquam quia eum et harum minus incidunt assumenda! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Totam minus est illum quis, ipsa ut odit possimus similique tempore dolorum enim ipsam delectus ducimus velit quae quia necessitatibus. Veritatis, voluptas? Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto veniam dolor consectetur. Architecto iusto, voluptatem dignissimos sequi dolores ipsum accusamus vel, molestias, ipsa nam modi temporibus cum cumque! Dignissimos, ipsam! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Id aspernatur, sequi adipisci exercitationem minus, totam facere libero distinctio alias odio rerum molestias voluptatem excepturi eaque dicta. Velit, vitae doloribus. Quaerat.
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Velit, assumenda! Eveniet optio expedita quisquam recusandae enim reprehenderit provident corrupti earum, a, ex id beatae! Quod quibusdam labore rem hic! Soluta. Lorem ipsu
+        </p>
+        <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic adipisci at numquam velit praesentium deserunt odio. Qui maiores illum, consequatur earum temporibus sed eum voluptatum optio, laboriosam quidem, fuga quo!Loremlorem
             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Neque autem, quis vel sit sed, inventore quisquam non dolorum harum quo saepe veniam eaque eligendi? Totam mollitia nihil sequi omnis cumque!Loremloremlore
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Velit, assumenda! Eveniet optio expedita quisquam recusandae enim reprehenderit provident corrupti earum, a, ex id beatae! Quod quibusdam labore rem hic! Soluta. Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique repudiandae, cumque aspernatur, officiis a natus itaque quidem facilis eos blanditiis officia possimus enim, minus quasi earum odit sequi delectus debitis? Lorem ipsum dolor, sit amet consectetur adipisicing elit. At hic tempora maiores adipisci doloribus repellat veniam? Eaque, animi. Illo facilis non eaque numquam quia eum et harum minus incidunt assumenda! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Totam minus est illum quis, ipsa ut odit possimus similique tempore dolorum enim ipsam delectus ducimus velit quae quia necessitatibus. Veritatis, voluptas? Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto veniam dolor consectetur. Architecto iusto, voluptatem dignissimos sequi dolores ipsum accusamus vel, molestias, ipsa nam modi temporibus cum cumque! Dignissimos, ipsam! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Id aspernatur, sequi adipisci exercitationem minus, totam facere libero distinctio alias odio rerum molestias voluptatem excepturi eaque dicta. Velit, vitae doloribus. Quaerat.
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Velit, assumenda! Eveniet optio expedita quisquam recusandae enim reprehenderit provident corrupti earum, a, ex id beatae! Quod quibusdam labore rem hic! Soluta. Lorem ipsum 
+        </p>
+        <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic adipisci at numquam velit praesentium deserunt odio. Qui maiores illum, consequatur earum temporibus sed eum voluptatum optio, laboriosam quidem, fuga quo!Loremlorem
             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Neque autem, quis vel sit sed, inventore quisquam non dolorum harum quo saepe veniam eaque eligendi? Totam mollitia nihil sequi omnis cumque!Loremloremlore
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Velit, assumenda! Eveniet optio expedita quisquam recusandae enim reprehenderit provident corrupti earum, a, ex id beatae! Quod quibusdam labore rem hic! Soluta. Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique repudiandae, cumque aspernatur, officiis a natus itaque quidem facilis eos blanditiis officia possimus enim, minus quasi earum odit sequi delectus debitis? Lorem ipsum dolor, sit amet consectetur adipisicing elit. At hic tempora maiores adipisci doloribus repellat veniam? Eaque, animi. Illo facilis non eaque numquam quia eum et harum minus incidunt assumenda! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Totam minus est illum quis, ipsa ut odit possimus similique tempore dolorum enim ipsam delectus ducimus velit quae quia necessitatibus. Veritatis, voluptas? Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto veniam dolor consectetur. Architecto iusto, voluptatem dignissimos sequi dolores ipsum accusamus vel, molestias, ipsa nam modi temporibus cum cumque! Dignissimos, ipsam! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Id aspernatur, sequi adipisci exercitationem minus, totam facere libero distinctio alias odio rerum molestias voluptatem excepturi eaque dicta. Velit, vitae doloribus. Quaerat.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic adipisci at numquam velit praesentium deserunt odio. Qui maiores illum, consequatur earum temporibus sed eum voluptatum optio, laboriosam quidem, fuga quo!Loremlorem
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Neque autem, quis vel sit sed, inventore quisquam non dolorum harum quo saepe veniam eaque eligendi? Totam mollitia nihil sequi omnis cumque!Loremloremlore
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Velit, assumenda! Eveniet optio expedita quisquam recusandae enim reprehenderit provident corrupti earum, a, ex id beatae! Quod quibusdam labore rem hic! Soluta. Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique repudiandae, cumque aspernatur, officiis a natus itaque quidem facilis eos blanditiis officia possimus enim, minus quasi earum odit sequi delectus debitis? Lorem ipsum dolor, sit amet consectetur adipisicing elit. At hic tempora maiores adipisci doloribus repellat veniam? Eaque, animi. Illo facilis non eaque numquam quia eum et harum minus incidunt assumenda! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Totam minus est illum quis, ipsa ut odit possimus similique tempore dolorum enim ipsam delectus ducimus velit quae quia necessitatibus. Veritatis, voluptas? Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto veniam dolor consectetur. Architecto iusto, voluptatem dignissimos sequi dolores ipsum accusamus vel, molestias, ipsa nam modi temporibus cum cumque! Dignissimos, ipsam! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Id aspernatur, sequi adipisci exercitationem minus, totam facere libero distinctio alias odio rerum molestias voluptatem excepturi eaque dicta. Velit, vitae doloribus. Quaerat.
-
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Velit, assumenda! Eveniet optio expedita quisquam recusandae enim reprehenderit provident corrupti earum, a, ex id beatae! Quod quibusdam labore rem hic! Soluta. Lorem ipsum 
         </p>
     </div>
 
@@ -111,14 +114,15 @@
      <div id="footer">
          <div class="spacing"></div>
          <div class="row"></div>
-            <div class="large-3 medium-3 columns">
+            <div class="col-sm">
                 <h1>
                     <a href="./index.html">
                         <img src="./img/otterbadge.jpg">
                     </a>
                 </h1>
+                
             </div>
-            <div class="large-3 medium-3 columns">
+            <div class="col-sm">
                 <div class="links">
                     <h4>Links</h4>
                 <ul>
@@ -133,18 +137,6 @@
                     </li>
                 </ul>    
                 <div class='spacing'></div>
-                <ul class='socials'>
-                    <li>
-                      <a href='https://www.facebook.com/CatalogueOfLife/'>
-                        <i class='fa fa-facebook'></i>
-                      </a>
-                    </li>
-                    <li>
-                      <a href='https://twitter.com/catalogueoflife'>
-                        <i class='fa fa-twitter'></i>
-                      </a>
-                    </li>
-                  </ul>
                   <div class='spacing'></div>
                 </div>
             </div>
