done with the otters

--- a/catalogue.html
+++ b/catalogue.html
@@ -32,11 +32,11 @@
                     CATALOGUE
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarScrollingDropdown">
-                    <li><a class="dropdown-item" href="./catalogue.html#target1" target="_blank">Eurasian otter (Lutra lutra)</a></li>
-                    <li><a class="dropdown-item" href="./catalogue.html#target2" target="_blank">Hairy-nosed otter (Lutra sumatrana)</a></li>
-                    <li><a class="dropdown-item" href="./catalogue.html#target3" target="_blank">Spotted-necked otter (Hydrictus maculicollis)</a></li>
-                    <li><a class="dropdown-item" href="./catalogue.html#target4" target="_blank">Smooth-coated otter (Lutrogale persipicillata)</a></li>
-                    <li><a class="dropdown-item" href="./catalogue.html#target5" target="_blank">Bonus: Cuddly otter</a></li>
+                    <li><a class="dropdown-item" href="./catalogue.html#target1">Eurasian otter (Lutra lutra)</a></li>
+                    <li><a class="dropdown-item" href="./catalogue.html#target2">Hairy-nosed otter (Lutra sumatrana)</a></li>
+                    <li><a class="dropdown-item" href="./catalogue.html#target3">Spotted-necked otter (Hydrictus maculicollis)</a></li>
+                    <li><a class="dropdown-item" href="./catalogue.html#target4">Smooth-coated otter (Lutrogale persipicillata)</a></li>
+                    <li><a class="dropdown-item" href="./catalogue.html#target5">Bonus: Cuddly otter</a></li>
                 </ul>
                 </li>
                 <li class="nav-item">
@@ -51,7 +51,7 @@
 
     <div class="catalotter">
         <h1>Catalotter</h1>
-            <h2><a id="target1">Eurasian otter (Lutra lutra)</a></h2>
+            <h2><a>Eurasian otter (Lutra lutra)<span class="anchor" id="target1"></span></a></h2>
             <img src="./img/eurasian.jpg" alt="eurasian otter">
             <h5>Two Eurasian otters on the River Thet in Norfolk. © David Tipling/Getty</h5>
             <p>This species is the most widely distributed of all the otters, ranging through Eurasia up to the Arctic Circle, from Ireland to Kamchatka, and south to North Africa, Sri Lanka and Indonesia.
@@ -62,7 +62,7 @@
                 
                 The Eurasian otter’s scientific name, Lutra lutra, is an example of a tautonym where the genus and specific name are the same.
             </p>
-            <h2><a id="target2">Hairy-nosed otter (Lutra sumatrana)</a></h2>
+            <h2><a>Hairy-nosed otter (Lutra sumatrana)<span class="anchor" id="target2"></span></a></h2>
             <img src="./img/hairy-nosed.jpg" alt="hairynosed otter">
             <h5>Hairy-nosed otter on the river bank along the Kinabatangan River, Borneo. © Craig Lovell/Getty</h5>
             <p>This otter is found in coastal areas and on larger inland rivers across Southeast Asia (Myanmar, South Thailand, Cambodia, South Vietnam and Peninsular Malaysia, including Sumatra and Borneo).
@@ -71,24 +71,26 @@
                 
                 It is one of the rarest otter species. Until 1998, it was thought to have been extinct, but small populations have been discovered since then.
             </p>
-            <h2><a id="target3">Spotted-necked otter (Hydrictus maculicollis)</a></h2>
+            <h2><a>Spotted-necked otter (Hydrictus maculicollis)<span class="anchor" id="target3"></span></a></h2>
             <img src="./img/spotted-necked.jpg" alt="spottedneck otter">
             <h5>Spotted-necked otter. © Ariadne Van Zandbergen/Getty</h5>
             <p>Until recently, the spotted-necked otter was considered to be part of the Lutra genus, but it is now placed in the Hydrictus genus.
 
                 It is common in Lake Victoria and Zambia, but not in some lakes and rivers, such as in the Zambezi below the Victoria Falls.
             </p>
-            <h2><a id="target4">Smooth-coated otter (Lutrogale persipicillata)</a></h2>
+            <h2><a>Smooth-coated otter (Lutrogale persipicillata)<span class="anchor" id="target4"></span></a></h2>
             <img src="./img/smooth-coated.jpg" alt="smooth otter">
             <h5>A smooth-coated otter swimming in Kaziranga National Park (Assam, India). © James Warwick/Getty</h5>
             <p>Smooth-coated otters occur throughout much of the Indian Subcontinent in Java, Sumatra and Borneo, northward to south-western China, east through Nepal and Bhutan and India to Pakistan, excluding the Indus Valley. An isolated population of the species is also found in the marshes of Iraq indicating the range must once have been wider.
 
                 The fur of this species is smoother and shorter than that of other otters, and they use scent to communicate both within the otter species, and with other animals. In the past, this species was widely employed throughout its range by fishermen, with trained animals being highly valued.
             </p>
-            <h2><a id="target5">Cuddly otter</a></h2>
+            <h2><a>Cuddly otter<span class="anchor" id="target5"></span></a></h2>
             <img src="./img/cute-otter.jpg" alt="cute otter">
             <h5>Cutest. Otter. Ever.</h5>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officia ab non, id aut impedit illum labore voluptatem ratione dolorum optio est numquam! Dignissimos soluta ullam quo reprehenderit natus magni consequuntur!
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officia ab non, id aut impedit illum labore voluptatem ratione dolorum optio est numquam! Dignissimos soluta ullam quo reprehenderit natus magni consequuntur!
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officia ab non, id aut impedit illum labore voluptatem ratione dolorum optio est numquam! Dignissimos soluta ullam quo reprehenderit natus magni consequuntur!
             </p>
 </div>
 
