--- a/contact.html
+++ b/contact.html
@@ -95,20 +95,20 @@
               <div class="contact-details">
                 <h4>Visitor address:</h4>
                 <p>
-                    "Stichting Vrienden van de Otter"
+                    Stichting Vrienden van de Otter
                     <br>
-                    "Spanjaardslaan 136"
+                    Spanjaardslaan 136
                     <br>
-                    "8917 AX Leeuwarden"
+                    8917 AX Leeuwarden
                     <br>
-                    "The Netherlands"
+                    The Netherlands
                 </p>
                 <h4>Our ottery phone:</h4>
                 <p>
-                    "+31587370098"
+                    +31587370098
                 </p>
                 <h4>More info:</h4>
-                <p><a href="https://www.facebook.com/StichtingVriendenVanDeOtter/" target="_blank">"https://www.facebook.com/StichtingVriendenVanDeOtter/"</a></p>
+                <p><a href="https://www.facebook.com/StichtingVriendenVanDeOtter/" target="_blank">https://www.facebook.com/StichtingVriendenVanDeOtter/</a></p>
 
               </div>
           </div>
