--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
                     CATALOGUE
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarScrollingDropdown">
-                    <li><a class="dropdown-item" href="./catalogue.html#target1" target="_blank">Eurasian otter (Lutra lutra)</a></li>
-                    <li><a class="dropdown-item" href="./catalogue.html#target2" target="_blank">Hairy-nosed otter (Lutra sumatrana)</a></li>
-                    <li><a class="dropdown-item" href="./catalogue.html#target3" target="_blank">Spotted-necked otter (Hydrictus maculicollis)</a></li>
-                    <li><a class="dropdown-item" href="./catalogue.html#target4" target="_blank">Smooth-coated otter (Lutrogale persipicillata)</a></li>
-                    <li><a class="dropdown-item" href="./catalogue.html#target5" target="_blank">Bonus: Cuddly otter</a></li>
+                    <li><a class="dropdown-item" href="./catalogue.html#target1">Eurasian otter (Lutra lutra)</a></li>
+                    <li><a class="dropdown-item" href="./catalogue.html#target2">Hairy-nosed otter (Lutra sumatrana)</a></li>
+                    <li><a class="dropdown-item" href="./catalogue.html#target3">Spotted-necked otter (Hydrictus maculicollis)</a></li>
+                    <li><a class="dropdown-item" href="./catalogue.html#target4">Smooth-coated otter (Lutrogale persipicillata)</a></li>
+                    <li><a class="dropdown-item" href="./catalogue.html#target5">Bonus: Cuddly otter</a></li>
                 </ul>
                 </li>
                 <li class="nav-item">
